--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,20 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-primary: #365071;
+  --color-secondery: #e56b6f;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Montserrat";
+  color: var(--color-primary);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,
+h2 {
+  font-family: "Chillink";
+  font-size: 2rem;
 }
 
 * {
@@ -33,10 +26,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
