--- a/src/app/components/layout/Footer.module.css
+++ b/src/app/components/layout/Footer.module.css
@@ -13,12 +13,13 @@
 }
 
 .heading {
+  color: var(--color-dark);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
 .citing {
-  color: black;
+  color: var(--color-dark);
   font-size: 0.5rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -29,9 +30,9 @@
 }
 
 .citing a {
-  color: black;
+  color: var(--color-dark);
   transition: transform 1s ease;
 }
 .citing a:hover {
-  color: white;
+  color: var(--color-accent-light);
 }
