--- a/src/app/components/layout/Navigation.module.css
+++ b/src/app/components/layout/Navigation.module.css
@@ -10,6 +10,11 @@
   padding-bottom: 0.3em;
 
   background-color: var(--color-secondary);
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .navButton {
@@ -22,7 +27,7 @@
 
 .navButton:hover {
   font-size: 1.3em;
-  color: white;
+  color: var(--color-accent-light);
 }
 
 .logoNavButton svg g {
