--- a/src/app/components/layout/Footer.module.css
+++ b/src/app/components/layout/Footer.module.css
@@ -13,13 +13,13 @@
 }
 
 .heading {
-  color: var(--color-dark);
+  color: var(--color-primary);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
 .citing {
-  color: var(--color-dark);
+  color: var(--color-primary);
   font-size: 0.5rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -30,7 +30,7 @@
 }
 
 .citing a {
-  color: var(--color-dark);
+  color: var(--color-primary);
   transition: transform 1s ease;
 }
 .citing a:hover {
