product section - about me table component

--- a/src/app/components/about-me/aboutMe.module.css
+++ b/src/app/components/about-me/aboutMe.module.css
@@ -1,4 +1,7 @@
 .aboutMeContainer {
   margin-top: calc(var(--nav-height, 100px) + 30px);
   margin-left: 60px;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
 }
