--- a/src/app/components/about-me/aboutMe.module.css
+++ b/src/app/components/about-me/aboutMe.module.css
@@ -20,3 +20,20 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  .aboutMeContainer {
+    flex-direction: column;
+    margin-left: 30px;
+    margin-right: 30px;
+    gap: 2rem;
+    padding: 0;
+  }
+
+  .aboutMeContainer > *:last-child {
+    flex-basis: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
