fixed bug with google icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=optional");
+
 :root {
   /* --color-primary: #365071;
   --color-secondary: #e56b6f; */
