--- a/src/app/components/PriceCard.module.css
+++ b/src/app/components/PriceCard.module.css
@@ -1,4 +1,28 @@
 .cardContainer {
-  border: 1px solid black;
-  min-width: 300px;
+  background-color: pink;
+  max-width: 400px;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 2rem;
+  box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.4);
 }
+
+.banner {
+  background-image: url("/products/d-l-samuels-RgaIk9gGa8c-unsplash.jpg");
+  min-height: 200px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* .card .banner svg {
+  background-color: white;
+  width: 6rem; 
+  height: 6rem; 
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); 
+  border-radius: 50%;
+  transform: translateY(50%);
+  transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+} */
