priceCarb table design

--- a/src/app/components/PriceCard.module.css
+++ b/src/app/components/PriceCard.module.css
@@ -1,11 +1,13 @@
 .cardContainer {
-  background-color: pink;
-  max-width: 400px;
-  min-height: 500px;
+  background-color: var(--color-accent-light);
+  min-width: 400px;
+  max-width: 500px;
+  min-height: 520px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  border-radius: 2rem;
+  /* border-radius: 2rem; */
+  border-radius: 1em;
   box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.4);
 }
 
@@ -14,12 +16,16 @@
   position: relative;
 }
 
-/* .card .banner svg {
-  background-color: white;
-  width: 6rem; 
-  height: 6rem; 
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); 
-  border-radius: 50%;
-  transform: translateY(50%);
-  transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
-} */
+.title {
+  min-height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-primary);
+}
+
+.dataTable {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
