--- a/src/app/components/common/PriceList.module.css
+++ b/src/app/components/common/PriceList.module.css
@@ -1,3 +1,34 @@
-/* .pricingTable {
-  min-width: 400px;
-} */
+.pricingTable {
+  color: white;
+  margin: 20px;
+  border: solid white 1px;
+}
+
+.head tr th {
+  border: solid white 1px;
+}
+
+.head tr,
+.body td {
+  height: 2em;
+}
+
+.body td {
+  color: red;
+  border-bottom: solid white 1px;
+}
+
+.nameCell {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.qtCell {
+  text-align: center;
+}
+
+.standardCell,
+.deluxeCell {
+  text-align: right;
+  padding-right: 20px;
+}
