--- a/src/app/components/products/Products.module.css
+++ b/src/app/components/products/Products.module.css
@@ -1,5 +1,4 @@
 .container {
-  margin-top: calc(var(--nav-height, 100px) + 30px);
   margin-left: 80px;
   margin-right: 80px;
   display: flex;
@@ -8,21 +7,11 @@
   padding: 1rem;
 }
 
-.context {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  width: 100%;
-}
-
-.title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.tables {
+.priceWapper {
   display: flex;
   flex-direction: row;
-  padding: 3rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 3em;
+  margin-bottom: 3em;
 }
