--- a/src/app/components/PriceCard.module.css
+++ b/src/app/components/PriceCard.module.css
@@ -6,9 +6,9 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  /* border-radius: 2rem; */
-  border-radius: 1em;
-  box-shadow: 0px 1rem 1.5rem rgba(0, 0, 0, 0.4);
+  border-radius: 25px;
+  /* box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.2); */
+  box-shadow: 15px 10px 25px 0px rgba(0, 0, 0, 0.4);
 }
 
 .banner {
