removed gallery from product

--- a/src/app/components/products/Products.module.css
+++ b/src/app/components/products/Products.module.css
@@ -7,6 +7,16 @@
   padding: 1rem;
 }
 
+.priceWapper {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  gap: 50px;
+  justify-content: space-around;
+  margin-top: 5em;
+  margin-bottom: 5em;
+}
+
 .context {
   display: flex;
   flex-direction: column;
@@ -18,13 +28,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.priceWapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin-top: 3em;
-  margin-bottom: 3em;
 }
