--- a/src/app/components/PriceCard.module.css
+++ b/src/app/components/PriceCard.module.css
@@ -29,3 +29,11 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 768px) {
+  .cardContainer {
+    font-size: 0.9rem;
+    min-width: 350px;
+    min-height: 400px;
+  }
+}
