--- a/src/app/components/about-me/aboutMe.module.css
+++ b/src/app/components/about-me/aboutMe.module.css
@@ -5,6 +5,11 @@
 .context {
   display: flex;
   flex-direction: column;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
