--- a/src/app/components/about-me/aboutMe.module.css
+++ b/src/app/components/about-me/aboutMe.module.css
@@ -1,18 +1,10 @@
 .aboutMeContainer {
   margin-top: calc(var(--nav-height, 100px) + 30px);
-  margin-left: 80px;
-  margin-right: 80px;
-  display: flex;
-  flex-direction: row;
-  gap: 3rem;
-  padding: 1rem;
 }
 
 .context {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  width: 100%;
 }
 
 .title {
@@ -21,19 +13,21 @@
   align-items: center;
 }
 
-@media (max-width: 768px) {
-  .aboutMeContainer {
-    flex-direction: column;
-    margin-left: 30px;
-    margin-right: 30px;
-    gap: 2rem;
-    padding: 0;
-  }
+.imageWrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 
-  .aboutMeContainer > *:last-child {
-    flex-basis: 30%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.image {
+  width: 100%;
+  max-width: 4000px;
+  height: auto;
+  object-fit: cover;
+}
+
+@media (min-width: 1024px) {
+  .image {
+    max-width: 4000px;
   }
 }
