--- a/src/app/components/common/MainTitle.module.css
+++ b/src/app/components/common/MainTitle.module.css
@@ -1,3 +1,11 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+  gap: 30px;
+}
+
 .title {
   font-size: 4rem;
 }
