download button and minor fixes

--- a/src/app/components/common/TwoColumnSection.module.css
+++ b/src/app/components/common/TwoColumnSection.module.css
@@ -1,11 +1,12 @@
 .twoColumnSection {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-around;
   gap: 80px;
   margin-left: 50px;
   margin-right: 50px;
+  padding-bottom: 100px;
 }
 
 .reverse {
@@ -19,6 +20,7 @@
 @media (max-width: 768px) {
   .twoColumnSection {
     flex-direction: column;
+    align-items: center;
     margin-left: 50px;
     margin-right: 50px;
   }
