--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=optional");
+
 :root {
   /* --color-primary: #365071;
   --color-secondary: #e56b6f; */
@@ -6,6 +8,8 @@
   --color-accent-light: #e4c1f9;
   --color-dark: black;
   --color-light: white;
+
+  --nav-height: 100px;
 }
 
 html,
@@ -13,21 +17,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: "Montserrat";
-  color: var(--color-primary);
+  /* color: var(--color-primary); */
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-/* body {
-  background-image: url("/background/cake-dark.svg");
-  background-size: cover;
-  min-height: 100vh;
-} */
-
-h1,
 h2 {
-  font-family: "Chillink";
+  /* font-family: "Chillink"; */
   font-size: 2rem;
 }
 
@@ -40,4 +37,8 @@ h2 {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  line-height: 2;
 }
