--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,10 @@
   --nav-height: 100px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -41,4 +45,8 @@ a {
 
 p {
   line-height: 2;
+}
+
+section {
+  scroll-margin-top: var(--nav-height);
 }
