--- a/src/app/components/gallery/ImageFrame.module.css
+++ b/src/app/components/gallery/ImageFrame.module.css
@@ -3,10 +3,24 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 100px;
   padding: 10px;
 }
 
 .imageItem {
-  margin-bottom: 20px;
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 19px;
 }
+/* 
+.imageItem :global(img) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: auto !important;
+  height: auto !important;
+} */
