--- a/src/app/components/gallery/ImageFrame.module.css
+++ b/src/app/components/gallery/ImageFrame.module.css
@@ -15,12 +15,9 @@
   border: 1px solid #ccc;
   border-radius: 19px;
 }
-/* 
-.imageItem :global(img) {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: auto !important;
-  height: auto !important;
-} */
+
+@media (max-width: 768px) {
+  .container {
+    gap: 50px;
+  }
+}
