--- a/src/app/components/contact/Contact.module.css
+++ b/src/app/components/contact/Contact.module.css
@@ -15,3 +15,19 @@
   gap: 10px;
   margin-top: 20px;
 }
+
+@media (max-width: 768px) {
+  .container {
+    margin-bottom: 50px;
+  }
+
+  .imageWrapper {
+    width: 100%;
+  }
+
+  .image {
+    width: 100% !important;
+    height: auto !important;
+    display: block;
+  }
+}
